wording in last sentence of abstract
Two 'and's in a row make for bad reading, changed from:

> ... that produces Hamiltonian paths on all even-sized 2D rectangles and 3D rectangular cuboids,
> and relaxed traversals on odd-sized domains.

to:

> ...that produces Hamiltonian paths on all even-sized 2D rectangles, all even-sized 3D rectangular
> cuboids, and relaxed traversals on odd-sized domains.

--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -43,8 +43,10 @@
   Hilbert construction applies most naturally to square or cubic grids with side lengths
   that are exact powers of two.
   We present the \emph{Gilbert curve}, a simple recursive, Hilbert-like discrete space-filling
-  curve that produces Hamiltonian paths on all even-sized 2D rectangles and 3D rectangular cuboids,
+  curve that produces Hamiltonian paths on all even-sized 2D rectangles,  all even-sized 3D rectangular cuboids,
   and relaxed traversals on odd-sized domains.
+%  curve that produces Hamiltonian paths on all even-sized 2D rectangles and 3D rectangular cuboids,
+%  and relaxed traversals on odd-sized domains.
 \end{abstract}
 
 
