Possible confusion between 'dimension' and 'side length' in conclusion
The term "dimension" can be ambiguous between meaning the ambient dimension
the curve sits in (the 'd' in Z^d) and the side lengths of the rectangle/cuboid
in 2/3 dimensions.

Further confusing is saying 'two and three dimensions' in the very next sentence.

Changed:

> The Gilbert curve provides locality-preserving traversals in rectangular grids of arbitrary dimensions.

to:

> The Gilbert curve provides locality-preserving traversals in rectangular grids of arbitrary side lengths.

The introduction has 'Images and volumes can come in arbitrary dimensions.' but, in my opinion,
the context is clear so doesn't need to be changed.

--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -495,7 +495,8 @@ As such, with the subdivision scheme presented, the number of diagonal moves in 
 \section*{Summary and Conclusions}
 \label{sec:outlook}
 
-The Gilbert curve provides locality-preserving traversals in rectangular grids of arbitrary dimensions.
+%The Gilbert curve provides locality-preserving traversals in rectangular grids of arbitrary dimensions.
+The Gilbert curve provides locality-preserving traversals in rectangular grids of arbitrary side lengths.
 For even side lengths, the construction yields uniform, defect-free Hamiltonian paths in both two and three dimensions,
 providing a natural generalization of classical discrete Hilbert curves beyond power-of-two domains.
 For grids with odd dimensions, the resulting curves may contain diagonal steps, but still retain strong
