--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -234,69 +234,31 @@ Algorithm~\ref{alg:gilbert2d} gives pseudo code for the 2D Gilbert curve.
 
     \State \textit{\# $p, \alpha, \beta \in \mathbb{Z}^2$}
     \State \textbf{function }$\text{Gilbert2D}(p, \alpha, \beta)$
-    %\Function{Gilbert2D}{$p, \alpha, \beta$}
       \vskip0.5em
       \State \hskip1.0em $\alpha_2, \beta_2  = \text{div}(\alpha, 2), \text{div}(\beta, 2)$
       \vskip0.5em
-      %\If{ $(|\beta| \equiv 1)$ }
       \State \hskip1.0em \textbf{if }$(|\beta| \equiv 1)$
         \State \hskip2.0em \textbf{print} $p + i \cdot \delta(\alpha)$ \textbf{forall} $i \in |\alpha|$
-      %\ElsIf{ $(|\alpha| \equiv 1)$ }
       \State \hskip1.0em \textbf{else if }$(|\alpha| \equiv 1)$
         \State \hskip2.0em \textbf{print} $p + i \cdot \delta(\beta)$ \textbf{forall} $i \in |\beta|$
-      %\ElsIf{ $(2 |\alpha| > 3 |\beta|)$ }
       \vskip0.5em
       \State \hskip1.0em \textbf{else if }$(2 |\alpha| > 3 |\beta|)$
-        %\If{ $(|\alpha_2| > 2)$ and \\ \hskip4.12em $(|\alpha_2| \bmod{2} \equiv 1)$ }
-        %\State \hskip1.0em \textbf{if }$(|\alpha_2| > 2)$ and \\ \hskip3.4em $(|\alpha_2| \bmod{2} \equiv 1)$
         \vskip0.5em
         \State \hskip2.0em \textbf{if }$(|\alpha_2| > 2) \text{ and } (|\alpha_2| \bmod{2} \equiv 1)$
           \State \hskip3.0em $\alpha_2 \leftarrow \alpha_2 + \delta(\alpha)$
-        %\EndIf
         \vskip0.5em
         \State \hskip2.0em Gilbert2D($p, \alpha_2, \beta$)
         \State \hskip2.0em Gilbert2D($p + \alpha_2, \alpha - \alpha_2, \beta$)
-      %\Else
       \vskip0.5em
       \State \hskip1.0em \textbf{else }
-        %\If{ $(|\beta_2| > 2)$ and \\ \hskip4.12em $(|\beta_2| \bmod{2} \equiv 1)$ }
         \vskip0.5em
         \State \hskip2.0em \textbf{if }$(|\beta_2| > 2) \text{ and } (|\beta_2| \bmod{2} \equiv 1)$
           \State \hskip3.0em $\beta_2 \leftarrow \beta_2 + \delta(\beta)$
-        %\EndIf
-        %\State Gilbert2D($p$, \\ \hskip7.35em $\beta_2, \alpha_2$)
         \vskip0.5em
-        %\State \hskip2.0em Gilbert2D($p, \beta_2, \alpha_2$)
         \State \hskip2.0em Gilbert2D($p,$ \\ \hskip6.45em $\beta_2, \alpha_2$)
-        \State \hskip2.0em Gilbert2D($p + \beta_2$, \\ \hskip6.45em $\alpha, (\beta - \beta_2)$)
-        %\State \hskip2.0em Gilbert2D($p + (\alpha - \delta(\alpha)) \ +$ \\ \hskip6.45em $(\beta_2 - \delta(\beta))$, \\ \hskip6.2em $-\beta_2, -(\alpha - \alpha_2)$)
-        \State \hskip2.0em Gilbert2D($p + (\alpha - \delta(\alpha))  + (\beta_2 - \delta(\beta))$, \\ \hskip6.2em $-\beta_2, -(\alpha - \alpha_2)$)
+        \State \hskip2.0em Gilbert2D($p + \beta_2,$ \\ \hskip6.45em $\alpha, (\beta - \beta_2)$)
+        \State \hskip2.0em Gilbert2D($p + (\alpha - \delta(\alpha))  + (\beta_2 - \delta(\beta)),$ \\ \hskip6.2em $-\beta_2, -(\alpha - \alpha_2)$)
       \vskip0.5em
-      %\EndIf
-    %\EndFunction
-
-%    \State \textit{\# $p, \alpha, \beta \in \mathbb{Z}^2$}
-%    \Function{Gilbert2D}{$p$, $\alpha$, $\beta$}
-%      \State $\alpha_2, \beta_2  = \text{div}(\alpha, 2), \text{div}(\beta, 2)$
-%      \If{ $(|\beta| \equiv 1)$ }
-%        \State \textbf{yield} $p + i \cdot \delta(\alpha)$ \textbf{forall} $i \in |\alpha|$
-%      \ElsIf{ $(|\alpha| \equiv 1)$ }
-%        \State \textbf{yield} $p + i \cdot \delta(\beta)$ \textbf{forall} $i \in |\beta|$
-%      \ElsIf{ $(2 |\alpha| > 3 |\beta|)$ }
-%        \If{ $(|\alpha_2| > 2)$ and \\ \hskip4.12em $(|\alpha_2| \bmod{2} \equiv 1)$ }
-%          \State $\alpha_2 \leftarrow \alpha_2 + \delta(\alpha)$
-%        \EndIf
-%        \State \textbf{yield} Gilbert2D($p$, $\alpha_2$, $\beta$)
-%        \State \textbf{yield} Gilbert2D($p + \alpha_2$, $\alpha - \alpha_2$, $\beta$)
-%      \Else
-%        \If{ $(|\beta_2| > 2)$ and \\ \hskip4.12em $(|\beta_2| \bmod{2} \equiv 1)$ }
-%          \State $\beta_2 \leftarrow \beta_2 + \delta(\beta)$
-%        \EndIf
-%        \State \textbf{yield} Gilbert2D($p$, \\ \hskip9.75em $\beta_2$, $\alpha_2$)
-%        \State \textbf{yield} Gilbert2D($p + \beta_2$, \\ \hskip9.75em $\alpha$, $(\beta - \beta_2)$)
-%        \State \textbf{yield} Gilbert2D($p + (\alpha - \delta(\alpha)) +$ \\ \hskip9.75em $(\beta_2 - \delta(\beta))$, \\ \hskip9.75em $-\beta_2$, $-(\alpha - \alpha_2)$)
-%      \EndIf
-%    \EndFunction
 
   \end{algorithmic}
 \end{algorithm}
@@ -356,7 +318,8 @@ During subdivision, if the cuboid’s aspect ratio between width and either heig
 a horizontal bisection is performed. Two additional anisotropic cases are handled analogously when the aspect
 ratio between height and depth, or depth and height, exceeds a threshold of $4/3$.
 These thresholds were chosen empirically; a principled derivation and further optimization are left for future work.
-See Figure \ref{fig:gilbert3d_alg_fig} (\textit{a}-\textit{f}) for color coded templates and color coded examples.
+See Figure \ref{fig:gilbert3d_alg_fig} (\textit{a}-\textit{f}) for color coded templates and color coded examples
+of the anisotropic cases.
 
 Endpoints within a sub-divided region are kept on the exterior of the parent cuboid and joined after the resulting recursion
 has completed.
@@ -392,88 +355,33 @@ the standard 3D Hilbert curve.
     \vskip0.75em
 
     \State \hskip1.0em \textbf{else if }$(2 |\alpha|>3|\beta|) \text{ and } (2|\alpha|>3|\gamma|))$
-      %\State \hskip2.0em  Gilbert3D($p,\alpha _ 2,\beta,\gamma$)
       \State \hskip2.0em  Gilbert3D($p,$ \\ \hskip6.75em $\alpha _ 2,\beta,\gamma$)
-      %\State \hskip2.0em  Gilbert3D($p + \alpha _ 2,\alpha - \alpha _ 2,\beta,\gamma$)
       \State \hskip2.0em  Gilbert3D($p + \alpha _ 2,$ \\ \hskip6.75em $\alpha - \alpha _ 2,\beta,\gamma$)
 
     \vskip0.75em
 
     \State \hskip1.0em \textbf{else if }$(3 |\beta| > 4 |\gamma|)$
-      %\State \hskip2.0em  Gilbert3D($p,\beta _ 2,\gamma,\alpha _ 2$)
       \State \hskip2.0em  Gilbert3D($p,$ \\ \hskip6.75em $\beta _ 2,\gamma,\alpha _ 2$)
-      %\State \hskip2.0em  Gilbert3D($p + \beta _ 2,\alpha,\beta - \beta _ 2,\gamma$)
       \State \hskip2.0em  Gilbert3D($p + \beta _ 2,$ \\ \hskip6.75em $\alpha,\beta - \beta _ 2,\gamma$)
-      %\State \hskip2.0em  Gilbert3D($p \ + $ \\ \hskip6.255em $(\alpha - \delta(\alpha)) +$ \\ \hskip6.25em $(\beta _ 2 - \delta(\beta))$, \\ \hskip6.0em $-\beta _ 2,\gamma,-(\alpha - \alpha _ 2)$)
-      \State \hskip2.0em  Gilbert3D($p  + (\alpha - \delta(\alpha)) + (\beta _ 2 - \delta(\beta))$, \\ \hskip6.0em $-\beta _ 2,\gamma,-(\alpha - \alpha _ 2)$)
+      \State \hskip2.0em  Gilbert3D($p  + (\alpha - \delta(\alpha)) + (\beta _ 2 - \delta(\beta)),$ \\ \hskip6.0em $-\beta _ 2,\gamma,-(\alpha - \alpha _ 2)$)
 
     \vskip0.75em
 
     \State \hskip1.0em \textbf{else if }$(3 |\gamma| > 4 |\beta|)$
-      %\State \hskip2.0em  Gilbert3D($p,\gamma _ 2,\alpha _ 2,\beta$)
       \State \hskip2.0em  Gilbert3D($p,$ \\ \hskip6.75em $\gamma _ 2,\alpha _ 2,\beta$)
-      %\State \hskip2.0em  Gilbert3D($p + \gamma _ 2,\alpha, \beta, \gamma - \gamma _ 2$)
       \State \hskip2.0em  Gilbert3D($p + \gamma _ 2,$ \\ \hskip6.75em $\alpha, \beta, \gamma - \gamma _ 2$)
-      %\State \hskip2.0em  Gilbert3D($p \ +$ \\ \hskip6.25em $(\alpha - \delta(\alpha)) \ +$ \\ \hskip6.25em $(\gamma_2 - \delta(\gamma))$, \\ \hskip6.0em $-\gamma _ 2,-(\alpha-\alpha _ 2), \beta$)
-      \State \hskip2.0em  Gilbert3D($p  + (\alpha - \delta(\alpha))  + (\gamma_2 - \delta(\gamma))$, \\ \hskip6.0em $-\gamma _ 2,-(\alpha-\alpha _ 2), \beta$)
+      \State \hskip2.0em  Gilbert3D($p  + (\alpha - \delta(\alpha))  + (\gamma_2 - \delta(\gamma)),$ \\ \hskip6.0em $-\gamma _ 2,-(\alpha-\alpha _ 2), \beta$)
 
     \vskip0.75em
 
     \State \hskip1.0em \textbf{else }
-      %\State \hskip2.0em  Gilbert3D($p, \beta _ 2, \gamma _ 2, \alpha _ 2$)
       \State \hskip2.0em  Gilbert3D($p,$ \\ \hskip6.75em $\beta _ 2, \gamma _ 2, \alpha _ 2$)
-      %\State \hskip2.0em  Gilbert3D($p + \beta _ 2,\gamma,\alpha _ 2,(\beta - \beta _ 2)$)
-      \State \hskip2.0em  Gilbert3D($p + \beta _ 2,$, \\ \hskip6.75em $\gamma,\alpha _ 2,(\beta - \beta _ 2)$)
-      %\State \hskip2.0em  Gilbert3D($p \ +$ \\ \hskip6.25em $(\beta _ 2 - \delta(\beta)) \ +$ \\ \hskip6.25em $(\gamma - \delta(\gamma))$, \\ \hskip6.5em $\alpha,-\beta_2,-(\gamma-\gamma_2)$)
-      \State \hskip2.0em  Gilbert3D($p  + (\beta _ 2 - \delta(\beta))  + (\gamma - \delta(\gamma))$, \\ \hskip6.5em $\alpha,-\beta_2,-(\gamma-\gamma_2)$)
-      %\State \hskip2.0em  Gilbert3D($p \ +$ \\ \hskip6.25em $(\alpha - \delta(\alpha)) \ + \ $ \\ \hskip6.5em $\beta _ 2 + (\gamma - \delta(\gamma))$, \\ \hskip6.00em $-\gamma,-(\alpha - \alpha_2),(\beta-\beta_2)$)
-      \State \hskip2.0em  Gilbert3D($p + (\alpha - \delta(\alpha)) + \beta _ 2 + (\gamma - \delta(\gamma))$, \\ \hskip6.00em $-\gamma,-(\alpha - \alpha_2),(\beta-\beta_2)$)
-      %\State \hskip2.0em  Gilbert3D($p \ +$ \\ \hskip6.25em $(\alpha - \delta(\alpha)) \ +$ \\ \hskip6.25em $(\beta _ 2 - \delta(\beta))$, \\ \hskip6.0em $-\beta _ 2,\gamma _ 2,-(\alpha - \alpha_2)$)
-      \State \hskip2.0em  Gilbert3D($p + (\alpha - \delta(\alpha))  + (\beta _ 2 - \delta(\beta))$, \\ \hskip6.0em $-\beta _ 2,\gamma _ 2,-(\alpha - \alpha_2)$)
+      \State \hskip2.0em  Gilbert3D($p + \beta _ 2,$ \\ \hskip6.75em $\gamma,\alpha _ 2,(\beta - \beta _ 2)$)
+      \State \hskip2.0em  Gilbert3D($p  + (\beta _ 2 - \delta(\beta))  + (\gamma - \delta(\gamma)),$ \\ \hskip6.5em $\alpha,-\beta_2,-(\gamma-\gamma_2)$)
+      \State \hskip2.0em  Gilbert3D($p + (\alpha - \delta(\alpha)) + \beta _ 2 + (\gamma - \delta(\gamma)),$ \\ \hskip6.00em $-\gamma,-(\alpha - \alpha_2),(\beta-\beta_2)$)
+      \State \hskip2.0em  Gilbert3D($p + (\alpha - \delta(\alpha))  + (\beta _ 2 - \delta(\beta)),$ \\ \hskip6.0em $-\beta _ 2,\gamma _ 2,-(\alpha - \alpha_2)$)
 
     \vskip1.0em
-
-%    \EndFunction
-
-%    \State \textit{\# $p, \alpha, \beta, \gamma \in \mathbb{Z}^3$}
-%    \Function{Gilbert3D}{$p$, $\alpha$, $\beta$, $\gamma$}
-%
-%    \vskip0.5em
-%    \State $\alpha_2 \leftarrow \text{div}(\alpha,2) + \Delta(\alpha _ 2, \alpha)$
-%    \State $\beta_2 \leftarrow \text{div}(\beta,2) + \Delta(\beta _ 2, \beta)$
-%    \State $\gamma_2 \leftarrow \text{div}(\gamma,2) + \Delta(\gamma _ 2, \gamma)$
-%
-%    \vskip0.5em
-%
-%    \State \textbf{if }$(|\beta| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$
-%      \State \hskip1.0em \textbf{yield} $p + i \cdot \delta(\alpha)$ \textbf{forall} $i \in |\alpha|$
-%    \State \textbf{else if }$(|\alpha| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$
-%      \State \hskip1.0em \textbf{yield} $p + i \cdot \delta(\beta)$ \textbf{forall} $i \in |\beta|$
-%    \State \textbf{else if }$(|\alpha| \equiv 1)$ \textbf{ and } $(|\beta| \equiv 1)$
-%      \State \hskip1.0em \textbf{yield} $p + i \cdot \delta(\gamma)$ \textbf{forall} $i \in |\gamma|$
-%
-%    \vskip0.5em
-%
-%    \State \textbf{else if }$(2 |\alpha|>3|\beta|) \text{ and } (2|\alpha|>3|\gamma|))$
-%      \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\alpha _ 2$,$\beta$,$\gamma$)
-%      \State \hskip1.0em \textbf{yield} Gilbert3D($p + \alpha _ 2$,$\alpha - \alpha _ 2$,$\beta$,$\gamma$)
-%    \State \textbf{else if }$(3 |\beta| > 4 |\gamma|)$
-%      \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\beta _ 2$,$\gamma$,$\alpha _ 2$)
-%      \State \hskip1.0em \textbf{yield} Gilbert3D($p + \beta _ 2$,$\alpha$,$\beta - \beta _ 2$,$\gamma$)
-%      \State \hskip1.0em \textbf{yield} Gilbert3D($p + $ \\ \hskip9.125em $(\alpha - \delta(\alpha)) +$ \\ \hskip9.125em $(\beta _ 2 - \delta(\beta))$, \\ \hskip9.125em $-\beta _ 2$,$\gamma$,$-(\alpha - \alpha _ 2)$)
-%    \State \textbf{else if }$(3 |\gamma| > 4 |\beta|)$
-%      \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\gamma _ 2$,$\alpha _ 2$,$\beta$)
-%      \State \hskip1.0em \textbf{yield} Gilbert3D($p + \gamma _ 2$,$\alpha$, $\beta$, $\gamma - \gamma _ 2$)
-%      \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\alpha - \delta(\alpha))$ \\ \hskip9.125em $(\gamma_2 - \delta(\gamma))$, \\ \hskip9.5em $-\gamma _ 2$,$-(\alpha-\alpha _ 2)$, $\beta$)
-%
-%    \State \textbf{else }
-%      \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\beta _ 2$,$\gamma _ 2$,$\alpha _ 2$)
-%      \State \hskip1.0em \textbf{yield} Gilbert3D($p + \beta _ 2$,$\gamma$,$\alpha _ 2$,$(\beta - \beta _ 2)$)
-%      \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\beta _ 2 - \delta(\beta)) +$ \\ \hskip9.125em $(\gamma - \delta(\gamma))$, \\ \hskip9.5em $\alpha$,$-\beta_2$,$-(\gamma-\gamma_2)$)
-%      \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\alpha _ 2 - \delta(\alpha)) +$ \\ \hskip9.125em $\beta _ 2 + (\gamma - \delta(\gamma))$, \\ \hskip9.5em $-\gamma$,$-(\alpha - \alpha_2)$,$(\beta-\beta_2)$)
-%    \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\alpha - \delta(\alpha)) +$ \\ \hskip9.125em $(\beta _ 2 - \delta(\beta))$, \\ \hskip9.5em $-\beta _ 2$,$\gamma _ 2$,$-(\alpha - \alpha_2)$)
-%
-%    \EndFunction
 
   \end{algorithmic}
 \end{algorithm}
