Authors in references need to be terminated with a period
* reference 2 had "... Perdacher, and C. Plant ``A Novel ...", changed to
  "... Perdacher, and C. Platn. ``A Novel ..."

--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -427,7 +427,7 @@ AI tools were used in assisting the language and readability of this paper.
 
   \bibitem{anders2009} S. Anders. ``Visualization of genomic data with the Hilbert curve.'' \textit{Bioinformatics}, vol.~25, no.~10, pp. ~ 1231-1235, 2009.  \url{https://doi.org/10.1093/bioinformatics/btp152}
 
-  \bibitem{bohm2021} C. B{\"o}hm, M. Perdacher, and C. Plant ``A Novel Hilbert Curve for Cache-Locality Preserving Loops.'' \textit{IEEE Transactions on Big Data}, vol.~7, 2021, pp.~241-254
+  \bibitem{bohm2021} C. B{\"o}hm, M. Perdacher, and C. Plant. ``A Novel Hilbert Curve for Cache-Locality Preserving Loops.'' \textit{IEEE Transactions on Big Data}, vol.~7, 2021, pp.~241-254
 
   \bibitem{cortesi2011} A. Cortesi. \textit{Visualizing binaries with space-filling curves}. 2011. \url{https://corte.si/posts/visualisation/binvis/}.
 
