--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -427,13 +427,13 @@ AI tools were used in assisting the language and readability of this paper.
 
   \bibitem{anders2009} S. Anders. ``Visualization of genomic data with the Hilbert curve.'' \textit{Bioinformatics}, vol.~25, no.~10, pp. ~ 1231-1235, 2009.  \url{https://doi.org/10.1093/bioinformatics/btp152}
 
-  \bibitem{bohm2021} C. B{\"o}hm, M. Perdacher, and C. Plant. ``A Novel Hilbert Curve for Cache-Locality Preserving Loops.'' \textit{IEEE Transactions on Big Data}, vol.~7, 2021, pp.~241-254
+  \bibitem{bohm2021} C. B{\"o}hm, M. Perdacher, and C. Plant. ``A Novel Hilbert Curve for Cache-Locality Preserving Loops.'' \textit{IEEE Transactions on Big Data}, vol.~7, 2021, pp.~241-254.
 
-  \bibitem{cortesi2011} A. Cortesi. \textit{Visualizing binaries with space-filling curves}. 2011. \url{https://corte.si/posts/visualisation/binvis/}.
+  \bibitem{cortesi2011} A. Cortesi. \textit{Visualizing binaries with space-filling curves}. 2011. \url{https://corte.si/posts/visualisation/binvis/}
 
   %\bibitem{sagan1994} H. Sagan. \textit{Space-Filling Curves}, 1994 ed. Springer, 1994.
 
-  \bibitem{hilbert1891} D. Hilbert. ``Ueber die stetige Abbildung einer Linie auf ein Fl{\"a}chenst{\"u}ck.'', \textit{Mathematische Annalen}, vol.~38, 1891, pp.~459-460
+  \bibitem{hilbert1891} D. Hilbert. ``Ueber die stetige Abbildung einer Linie auf ein Fl{\"a}chenst{\"u}ck.'', \textit{Mathematische Annalen}, vol.~38, 1891, pp.~459-460.
 
   %\bibitem{lee2025} S. Lee, K. Ma. ``HINTs: Sensemaking on large collections of documents with {\bf H}ypergraph vizualization and {\bf INT}elligent agents.'' \textit{IEEE Transactions on Visualization and Computer Graphics}, vol.~31, no.~9, 2025, pp.~5532-5546
 
@@ -443,7 +443,7 @@ AI tools were used in assisting the language and readability of this paper.
 
   %\bibitem{rong2021} Y. Rong, X. Zhang, and J. Lin. ``
 
-  \bibitem{lutanho2003} L. Tautenhahn. \textit{Draw a space-filling curve of arbitrary size}, 2003. \url{https://lutanho.net/pic2html/draw_sfc.html}.
+  \bibitem{lutanho2003} L. Tautenhahn. \textit{Draw a space-filling curve of arbitrary size}, 2003. \url{https://lutanho.net/pic2html/draw_sfc.html}
 
   \bibitem{zhang2006} J. Zhang, S. Kamata, and Y. Ueshige. ``A Pseudo-Hilbert Scan Algorithm for Arbitrarily-Sized Rectangle Region.'' \textit{Advances in Machine Vision, Image Processing, and Pattern Analysis}, Berlin, Heidelberg, 2006, pp. 290-299.
 \end{thebibliography}
