year before page number for anders reference
* I guess it's a print journal and not an electronic journal, so year
  goes before page numbers

--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -425,7 +425,7 @@ AI tools were used in assisting the language and readability of this paper.
 \raggedright        % no right justification for References
 \begin{thebibliography}{99}
 
-  \bibitem{anders2009} S. Anders. ``Visualization of genomic data with the Hilbert curve.'' \textit{Bioinformatics}, vol.~25, no.~10, pp. ~ 1231-1235, 2009.  \url{https://doi.org/10.1093/bioinformatics/btp152}
+  \bibitem{anders2009} S. Anders. ``Visualization of genomic data with the Hilbert curve.'' \textit{Bioinformatics}, vol.~25, no.~10, 2009, pp.~1231-1235.  \url{https://doi.org/10.1093/bioinformatics/btp152}
 
   \bibitem{bohm2021} C. B{\"o}hm, M. Perdacher, and C. Plant. ``A Novel Hilbert Curve for Cache-Locality Preserving Loops.'' \textit{IEEE Transactions on Big Data}, vol.~7, 2021, pp.~241-254.
 
