more reference formatting
* took out trailing comma from Hilbert reference after paper title
* changed comma to period for Tautenhahn's web page name.

--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -433,7 +433,7 @@ AI tools were used in assisting the language and readability of this paper.
 
   %\bibitem{sagan1994} H. Sagan. \textit{Space-Filling Curves}, 1994 ed. Springer, 1994.
 
-  \bibitem{hilbert1891} D. Hilbert. ``Ueber die stetige Abbildung einer Linie auf ein Fl{\"a}chenst{\"u}ck.'', \textit{Mathematische Annalen}, vol.~38, 1891, pp.~459-460.
+  \bibitem{hilbert1891} D. Hilbert. ``Ueber die stetige Abbildung einer Linie auf ein Fl{\"a}chenst{\"u}ck.'' \textit{Mathematische Annalen}, vol.~38, 1891, pp.~459-460.
 
   %\bibitem{lee2025} S. Lee, K. Ma. ``HINTs: Sensemaking on large collections of documents with {\bf H}ypergraph vizualization and {\bf INT}elligent agents.'' \textit{IEEE Transactions on Visualization and Computer Graphics}, vol.~31, no.~9, 2025, pp.~5532-5546
 
@@ -443,7 +443,7 @@ AI tools were used in assisting the language and readability of this paper.
 
   %\bibitem{rong2021} Y. Rong, X. Zhang, and J. Lin. ``
 
-  \bibitem{lutanho2003} L. Tautenhahn. \textit{Draw a space-filling curve of arbitrary size}, 2003. \url{https://lutanho.net/pic2html/draw_sfc.html}
+  \bibitem{lutanho2003} L. Tautenhahn. \textit{Draw a space-filling curve of arbitrary size}. 2003. \url{https://lutanho.net/pic2html/draw_sfc.html}
 
   \bibitem{zhang2006} J. Zhang, S. Kamata, and Y. Ueshige. ``A Pseudo-Hilbert Scan Algorithm for Arbitrarily-Sized Rectangle Region.'' \textit{Advances in Machine Vision, Image Processing, and Pattern Analysis}, Berlin, Heidelberg, 2006, pp. 290-299.
 \end{thebibliography}
